--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.1",
-    "react-shimmer-effects": "^1.0.3"
+    "react-shimmer-effects": "^1.0.3",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
